--- a/index.html
+++ b/index.html
@@ -3,5 +3,16 @@
 <head>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body></body>
+<body>
+<section id="header">
+    Header: Should contain a navigation bar with links to different sections.
+<section id="about me">
+    About Me: A brief bio and a profile picture.
+<section id="skills">
+    Skills: A list of skills or technologies the student is familiar with.
+<section id="projects">
+    Projects: A showcase of a few projects with images and brief descriptions.
+<section id="contact">
+    Contact: A form or contact information.
+</body>
 </html>
