--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
             <a href="#projects">Projects</a>
             <a href="#contact">Contact</a>
         </nav>
-    <img src="profile-picture.jpg" alt="Henry Sacco" class="profile-img">
+    </header><br>
+        <img src="profile-picture.jpg" alt="Henry Sacco" class="profile-img">
         <h1>John Doe</h1>
         <p>IT Director, Volunteer, Veteran</p>
-    </header>
-        <section id="about-me">
+    <section id="about-me">
         <h2>About Me</h2>
         John started his professional career as an Army Ranger in 1986 specializing in 
         Tactical Communications. Although stationed in Washington, he spent considerable 
