--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header><br>
         <img src="profile-picture.jpg" alt="Henry Sacco" class="profile-img">
         <h1>John Doe</h1>
-        <p>IT Director, Volunteer, Veteran</p>
+        <p>IT Director, Volunteer, Veteran</p><br>
     <section id="about-me">
         <h2>About Me</h2>
         John started his professional career as an Army Ranger in 1986 specializing in 
